--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -62,7 +62,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_light"
-                    android:text="Reset Passwordmu  dengan memasukkan email"
+                    android:text="@string/reset_passwordmu_dengan_memasukkan_email"
                     android:textAlignment="center"
                     android:textColor="@color/main_blue"
                     android:textSize="14sp"
@@ -87,7 +87,7 @@
                         android:layout_marginStart="24dp"
                         android:layout_marginTop="20dp"
                         android:fontFamily="@font/gothica1_semibold"
-                        android:text="Nama Pengguna"
+                        android:text="@string/nama_pengguna"
                         android:textColor="@color/black"
                         android:textSize="12dp"
                         android:textStyle="bold" />
@@ -132,7 +132,7 @@
                     android:backgroundTint="@color/main_blue"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:text="ResetPassword" />
+                    android:text="@string/resetpassword" />
 
                 <TextView
                     android:id="@+id/btnLogin"
@@ -143,7 +143,7 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="24dp"
                     android:fontFamily="@font/gothica1_extrabold"
-                    android:text="Login Sekarang"
+                    android:text="@string/login_sekarang"
                     android:textColor="@color/main_blue"
                     android:textSize="13dp" />
 
@@ -167,7 +167,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp"
                     android:fontFamily="@font/gothica1_extrabold"
-                    android:text="Daftarkan Akunmu"
+                    android:text="@string/daftarkan_akunmu"
                     android:textColor="@color/main_blue"
                     android:textSize="13dp"
                     android:paddingBottom="40dp"
