--- a/app/src/main/res/layout/fragment_scan_qr_light.xml
+++ b/app/src/main/res/layout/fragment_scan_qr_light.xml
@@ -124,7 +124,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Profil Saya"
+                android:text="@string/profil_saya_light"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="15dp"
                 android:textColor="@color/main_white"/>
@@ -167,7 +167,7 @@
                 android:layout_marginTop="7dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ID Customer"
+                android:text="@string/_light"
                 android:fontFamily="@font/gothica1_semibold"
                 android:textColor="@color/white"
                 android:textSize="13dp"/>
