--- a/app/src/main/res/layout/fragment_splashscreen2.xml
+++ b/app/src/main/res/layout/fragment_splashscreen2.xml
@@ -26,7 +26,7 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:layout_height="wrap_content"
-            android:text="Ubah Catatanmu, Lebih Efisien dengan Nota Digital!"/>
+            android:text="@string/ubah_catatanmu_lebih_efisien_dengan_nota_digital"/>
         <ImageButton
             android:id="@+id/ibNext"
             android:layout_width="wrap_content"
