--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -223,6 +223,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <RelativeLayout
+                    android:id="@+id/cvKetentuanLayanan"
                     android:padding="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -245,6 +246,7 @@
                     android:layout_height="1dp"
                     android:background="#000000"/>
                 <RelativeLayout
+                    android:id="@+id/cvKebijakanPrivasi"
                     android:padding="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
